# netpp

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
docker/: default.conf  docker-compose.yml
include/Netpp/: Connection.h  DataEvent.h  Dispatcher.h  EventLoop.h  EventLoopEpoll.h  EventLoopHandler.h  Exception.h  FileStream.h  LoopControlHandler.h  MimeTypes.h  MoveOnlyFunction.h  NetppDebug.h  Protocol.h  Resolver.h  RingBuffer.h  Sender.h  SignalHandler.h  SingleThreadDispatcher.h  SockAddr.h  Socket.h  Stack.h  TcpServer.h  ThreadPoolDispatcher.h  TimerScheduler.h  TransportHandler.h  Types.h
include/Netpp/Chat/: ChatProtocol.h
include/Netpp/Core/: SingleThreadDispatcher.h  StdinHandler.h  TcpHandler.h  ThreadPoolDispatcher.h  TimerHandler.h  UdpHandler.h
include/Netpp/Dns/: DnsMessage.h  DnsParser.h  DnsProtocol.h
include/Netpp/Echo/: EchoProtocol.h
include/Netpp/Http/: ChunkedEncoder.h  HttpClientProtocol.h  HttpException.h  HttpFileServer.h  HttpMessage.h  HttpProtocol.h  HttpRequest.h  HttpResponse.h  HttpRouter.h
include/Netpp/Logger/: Logger.h
scripts/: enable-coredump.sh
src/: Netpp.h  client.cpp  client.php  client.py  dns_client.cpp  http_client.cpp  server.cpp  server_test.py  server_tmpl.cpp
src/Netpp/: CMakeLists.txt  Core.cpp  EventLoop.cpp  Stack.cpp
src/Netpp/Chat/: CMakeLists.txt
src/Netpp/Dns/: CMakeLists.txt  DnsParser.cpp
src/Netpp/Echo/: CMakeLists.txt
src/Netpp/Http/: CMakeLists.txt
src/Netpp/Logger/: CMakeLists.txt  Logger.cpp
tests/: CMakeLists.txt  ChunkedEncoderTest.cpp  DnsParserTest.cpp  HttpMessageTest.cpp  HttpRequestTest.cpp  MoveOnlyFunctionTest.cpp  RingBufferTest.cpp  SockAddrTest.cpp
